connect client and room
